adicionado menu e home section

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,17 @@
-/*
-    HEADER
+/* 
+     HEADER 
+     
 */
 
 .header .container {
      padding: 20px 15px;
- }
- 
- .header .logo {
+}
+
+.header .Logo {
      float: left;
- }
- 
- .header .logo a {
+}
+
+.header .Logo a {
      display: inline-block;
      text-align: center;
      line-height: 36px;
@@ -21,42 +22,21 @@
      color: #fb839e;
      border-radius: 50%;
      text-transform: uppercase;
- }
- 
- .header .menu {
+}
+
+.header .menu {
      position: relative;
      text-align: center;
- }
- 
- .header .menu li {
+     right: 20px;
+}
+
+.header .menu li {
      display: inline-block;
      padding: 10px 6px;
- }
- 
- .header .menu li a {
+}
+
+.header .menu li a {
      color: #d0d0d0;
      font-weight: 400;
      text-decoration: underline;
- }
- 
- /* HOME SECTION */
- 
- .home-section {
-     position: relative;
-     background-color: red;
- }
- 
- .home-section:after {
-     content: '';
-     clear: both;
-     display: block;
- }
- 
- .home-section .full-screen {
-     padding: 50px 0;
- }
- 
- .home-section .home-text {
-     max-width: 450px;
-     float: left;
- }
+}
